# the-mind

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  spec.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  pages.yml
content/archive/: index.md
content/blog/: index.md
content/claims/: index.md
content/glossary/: index.md
content/guide/: index.md
content/questions/: could-ai-be-conscious.md  do-llms-have-qualia.md  index.md  what-is-a-mind.md  (+5 more)
docs/: further_reading.md  knowledge_base.md  provenance.md  sources.md  sources_notes.md  time_alignment.md
notes/: bach_quote_bank.md  claims.md  concept_map.md  glossary.md  lineage.md
outlines/: book_structure.md
scripts/: add_bach_anchors.py  asr_faster_whisper.py  build_all.py  build_book_md.py  build_book_public_md.py  build_chapter_anchors.py  build_readme.py  build_references.py  build_site.py  build_source_notes.py  check_public_repo_hygiene.py  convert_cookies_brave.py  diarize_bach.py  export_blog_posts.py  fetch_transcripts.py  import_bach_ai_sitemap.py  import_ccc_sources.py  import_substack_archive.py  import_web_urls.py  import_youtube_sources.py  install_git_hooks.sh  lint_knowledge_base.py  lint_provenance.py  normalize_source_formats.py  progress_report.py  render_mermaid_svg.mjs  search_transcripts.py  show_transcript_snippet.py  source_queue.py  speaker_audit.py
site/: home.md
sources/: README.md  sources.csv  sweep_seeds.md
tests/: test_build_readme.py  test_locators_and_urls.py  test_provenance.py  test_site_markdown.py
the_mind/: __init__.py
(+488 files in other folders)
